Re-arranged files, added new package, made input reading stricter